# adash

./: .gitignore  CMakeLists.txt  README.md  adash  adash.code-workspace  adash_out01.ans  adash_out02.ans  compile_windows_cmd.txt  cursesAnsi.cpp  cursesAnsi.hpp  emoji-data.txt  main.cpp  makefile  moduleDialog.cpp  moduleDialog.hpp  screen.cpp  screen.hpp  test.txt  utils.cpp  utils.hpp  widget.cpp  widget.hpp  widgetANSI.cpp  widgetANSI.hpp  widgetClock.cpp  widgetClock.hpp  widgetDeco.cpp  widgetDeco.hpp  widgetDialog.cpp  widgetDialog.hpp  widgetManager.cpp  widgetManager.hpp  widgetTextFile.cpp  widgetTextFile.hpp
logs/: log.txt
